[package]
name = "rust-axum-playgorund"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.11"
tower = "0.4.13"
hyper = { version = "0.14.20", features = ["full"] }
tokio = { version = "1.19.2", features = ["full"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"